--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>It is <%=dayOfWeek%>!</h1>
+        <h1>It is <%= dayOfWeek %>.</h1> 
     </body>
 </html>
