--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,5 +10,14 @@
     </head>
     <body>
         <h1>It is <%= dayOfWeek %>.</h1> 
+        <ul>
+            <% for(let x = 0; x<itemList.length; x++) { %>
+                <li>itemList[x]</li>
+            <% } %>
+        </ul>
+        <form action="/" method="post">
+            <input type="text" name="newItem" placeholder="New Item">
+            <button type="submit" name="submit">Add</button>
+        </form>
     </body>
 </html>
