--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Author: Varun Pasupuleto-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -9,9 +10,9 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>It is <%= dayOfWeek %>.</h1> 
+        <h1>It is <%= dayOfWeek %>.</h1> <!--uses variable-->
         <ul>
-            <% for(var i = 0; i<itemList.length; i++) { %>
+            <% for(let i = 0; i<itemList.length; i++) { %> <!--dynamically add list items-->
                 <li><%= itemList[i] %></li>
             <% } %>
         </ul>
