--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,18 +7,23 @@
         <title>To Do List</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1>It is <%= dayOfWeek %>.</h1> <!--uses variable-->
-        <ul>
+        <div class="box" id="heading">
+            <h1><%= dayOfWeek %></h1> <!--uses variable-->
+        </div>
+        <div class="box">
             <% for(let i = 0; i<itemList.length; i++) { %> <!--dynamically add list items-->
-                <li><%= itemList[i] %></li>
+                <div class="item">
+                    <input type="checkbox">
+                    <p><%= itemList[i] %></p>
+                </div>
             <% } %>
-        </ul>
-        <form action="/" method="post">
-            <input type="text" name="newItem" placeholder="New Item">
-            <button type="submit" name="submit">Add</button>
-        </form>
+            <form class="item" action="/" method="post">
+                <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+                <button type="submit" name="button">+</button>
+            </form>
+        </div>
     </body>
 </html>
