changed background collor

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,8 @@
 /* NOT MINE, replace later on*/
 
 html {
-  background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(65deg, #DF2E38 50%, #EEEEEE 50%);
+  background-color: #EEEEEE;
+  /* background-image: -webkit-linear-gradient(65deg, #DF2E38 50%, #EEEEEE 50%); */
   min-height: 1000px;
   font-family: 'helvetica neue';
 }
